<?xml version="1.0" encoding="utf-8"?><!--
/*
**
** Copyright 2008, The Android Open Source Project
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at
**
**     http://www.apache.org/licenses/LICENSE-2.0
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
*/
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- Title for Latin keyboard  -->
    <string name="ime_name">Ѣ/Ѫ клавиатура</string>

    <!-- Symbols that are commonly considered word separators in this language -->
    <string name="word_separators">\u0020.,;:!?\n()[]*&amp;@{}/&lt;&gt;_+-=@#$%"'„“1234567890|&quot;</string>
    <string name="exclusion_separators">1234567890:-</string>
    <!-- Labels on soft keys -->
    <string name="label_go_key">Go</string>
    <string name="label_next_key">Next</string>
    <string name="label_send_key">Send</string>

    <!-- Labels for subtype -->
    <string name="label_subtype_generic">%s</string>
    <string name="label_subtype_bg_BG">Български (БГ)</string>

    <!-- Titles for ImePreference -->
    <string name="settings_name">Ѣ/Ѫ клавиатура</string>
    <string name="language_selection_title">Input languages</string>
    <string name="select_language">Select input languages</string>
    <string name="general_category">General</string>

    <!--Alert dialog-->
    <string name="alert_title">Речник</string>
    <string name="alert_diag_msg_delete">Сигурни ли сте, че искате да изтриете</string>
    <string name="alert_diag_msg_delete_d">от речника ?</string>
    <string name="alert_diag_msg_save">Желаетели да запаметите</string>
    <string name="alert_diag_msg_save_d">в речника ?</string>

    <!--Android Setting-->
    <string name="setting_keyboard_layout">Клавиатурна подредба</string>
    <string-array name="keyboard_layouts">
        <item>Фонетична</item>
        <item>БДС</item>
    </string-array>
    <string-array name="keyboard_layout_codes">
        <item>"phonetic"</item>
        <item>"bds"</item>
    </string-array>
    <string name="setting_android_dictionary">Предложения на думи, докато пишете</string>
    <string name="setting_converter">Правописенъ конверторъ</string>
    <string name="setting_converter_i">Прѣдложенията да се изписватъ на Иванчевски правописъ</string>
    <string name="title_activity_main">Ѣ/Ѫ клавиатура</string>

    <string name="action_settings">Settings</string>

    <string name="app_title">Ѣ/Ѫ клавиатура</string>
    <string name="app_donate_text"> Проектът Ѣ/Ѫ клавиатура има нужда от твоята помощ.\n Направи дарение за да продължим да се развиваме.</string>
    <string name="app_donate_text_goole">  \n \n Google взима 30% от вашето дарение.</string>
    <string name="next_level">Направи дарение</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string-array name="donation_google_catalog_values">
        <item>2 лева</item>
        <item>3 лева</item>
        <item>5 лева</item>
        <item>10 лева</item>
        <item>20 лева</item>
        <item>30 лева</item>
        <item>50 лева</item>
        <item>100 лева</item>
    </string-array>

    <string name="donation_paypal_item">Donation</string>
    <string name="vibrate_on_keypress">Вибрация при натискане на клавиши</string>
    <string name="title_activity_launch">LaunchActivity</string>
    <string name="open_settings">Включване на клавиатурата</string>
    <string name="select_keyboard">Избиране на клавиатурата</string>
    <string name="keyboard_settings">Настройки</string>
    <string name="more_info">За Иванчевския правописъ</string>
    <string name="welcome_text">Приложението позволява изписването на буквите \"ѣ\" (ят) и \"ѫ\" (юс) и извършва проверка на всяка изписана дума, предоставяйки вариантa ѝ по правилата на стария български (Иванчевски) правопис.</string>
    <string name="activation_text">За да използвате клавиатурата последвайте следните бутони:</string>
</resources>
