<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.oldbg.bulgariankeyboard.MainActivity">

    <Button
        android:text="@string/keyboard_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/keyboard_settings"
        android:layout_marginBottom="23dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/select_keyboard" />

    <Button
        android:text="@string/more_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/more_info"
        android:layout_alignBaseline="@+id/keyboard_settings"
        android:layout_alignBottom="@+id/keyboard_settings"
        android:layout_alignEnd="@+id/open_settings"
        android:layout_toEndOf="@+id/keyboard_settings" />

    <TextView
        android:text="@string/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:fontFamily="sans-serif"
        android:textSize="18sp"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/new_icon"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="19dp" />

    <TextView
        android:text="@string/activation_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:fontFamily="sans-serif"
        android:textSize="18sp"
        android:layout_above="@+id/open_settings"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/select_keyboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/select_keyboard"
        android:layout_above="@+id/keyboard_settings"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/open_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/open_settings"
        android:layout_above="@+id/select_keyboard"
        android:layout_alignParentStart="true" />
</RelativeLayout>
